fixed spacing

--- a/mympy-app/src/components/stats/stats.scss
+++ b/mympy-app/src/components/stats/stats.scss
@@ -10,9 +10,10 @@
     justify-content: space-evenly;
 
     h1 {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         font-family: $large-font;
         font-weight: 700;
+        margin: 3% auto;
         
     }
 
@@ -30,6 +31,7 @@
         color: white;
         border-radius: 20px;
         line-height: 1.6rem;
+        margin: 3% auto;
     }
 
     .myDreams {
